--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -131,4 +131,95 @@
   .main-app-bg {
     @apply rounded-[20px];
   }
+
+  /* 00:00 */
+  .clock-text {
+    -webkit-text-stroke: 1px #8F4428;
+  }
+
+  .clock-text {
+    font-family: 'Wendy One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 15px;
+    -webkit-leading-trim: both;
+    -webkit-text-edge: cap;
+    color: #FFFFFF;
+    text-shadow: 0px 2px 2px rgba(85, 35, 0, 0.6);
+  }
+
+  .counter-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px;
+    width: 67px;
+    height: 28px;
+
+    background: #F8E817;
+    box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.45);
+    border-radius: 20px;
+  }
+
+  .click-to-play {
+    /* Click Play to start the game */
+
+    width: 312px;
+    height: 55px;
+
+    font-family: 'Wendy One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 33px;
+    line-height: 35px;
+    -webkit-leading-trim: both;
+    -webkit-text-edge: cap;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    -webkit-text-stroke: 1px rgba(0, 0, 0, 0.6);
+    flex: none;
+    order: 0;
+    align-self: stretch;
+    flex-grow: 0;
+  }
+
+  .solve-fun {
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 105%;
+    text-align: center;
+    color: #FFFFFF;
+  }
+
+  .play-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 21px 60px;
+    gap: 10px;
+
+    width: 236px;
+    margin-inline: auto;
+    height: 56px;
+
+    background: #F8E817;
+    box-shadow: 0px 4px 0px #FFF469, inset 0px -5px 4px #CEA302, inset 0px 4px 4px rgba(255, 255, 255, 0.6);
+    border-radius: 20px;
+  }
+
+  .play-txt {
+    font-family: 'Urbanist';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #000000;
+  }
+
 }
